--- a/src/renderer/operations/index.html
+++ b/src/renderer/operations/index.html
@@ -622,8 +622,12 @@
         <header id="dlgTitle">إضافة عملية جديدة</header>
         <div class="body">
           <div class="form-group">
-            <label for="f_name">اسم العملية</label>
+            <label for="f_name">اسم العملية (عربي)</label>
             <input id="f_name" type="text" placeholder="أدخل اسم العملية..." autocomplete="off" />
+          </div>
+          <div class="form-group">
+            <label for="f_name_en">اسم العملية (English)</label>
+            <input id="f_name_en" type="text" placeholder="Enter operation name..." autocomplete="off" dir="ltr" />
           </div>
 
           <div class="modal-actions">
