--- a/src/renderer/sales/index.html
+++ b/src/renderer/sales/index.html
@@ -556,6 +556,7 @@
     tbody td:nth-child(4) {
       width: 28%;
       white-space: nowrap;
+      text-align: center;
     }
 
     thead th:nth-child(5),
