--- a/src/renderer/types/index.html
+++ b/src/renderer/types/index.html
@@ -69,8 +69,13 @@
         <h3 id="modalTitle" class="text-lg font-black text-slate-800 mb-4">إضافة نوع رئيسي</h3>
         <div class="space-y-4">
           <div>
-            <label for="m_name" class="block text-sm font-bold text-slate-700 mb-2">اسم النوع</label>
+            <label for="m_name" class="block text-sm font-bold text-slate-700 mb-2">اسم النوع (عربي)</label>
             <input id="m_name" placeholder="مثال: إلكترونيات" 
+                   class="w-full px-4 py-2.5 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm font-semibold" />
+          </div>
+          <div>
+            <label for="m_name_en" class="block text-sm font-bold text-slate-700 mb-2">اسم النوع (English)</label>
+            <input id="m_name_en" placeholder="e.g. Electronics" dir="ltr"
                    class="w-full px-4 py-2.5 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm font-semibold" />
           </div>
           <div class="flex items-center gap-3 pt-2">
