--- a/src/renderer/operations/index.html
+++ b/src/renderer/operations/index.html
@@ -627,7 +627,15 @@
           </div>
           <div class="form-group">
             <label for="f_name_en">اسم العملية (English)</label>
-            <input id="f_name_en" type="text" placeholder="Enter operation name..." autocomplete="off" dir="ltr" />
+            <div style="display:flex; align-items:center; gap:8px;">
+              <input id="f_name_en" type="text" placeholder="Enter operation name..." autocomplete="off" dir="ltr" style="flex:1; width:auto;" />
+              <button id="btnTranslateOpName" type="button" title="ترجمة الاسم العربي إلى إنجليزي"
+                      style="flex-shrink:0; width:40px; height:40px; display:flex; align-items:center; justify-content:center; background:#fff; border:1px solid #e2e8f0; border-radius:10px; cursor:pointer; box-shadow:0 1px 3px rgba(0,0,0,0.1);">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="#4285F4">
+                  <path d="M12.87 15.07l-2.54-2.51.03-.03A17.52 17.52 0 0 0 14.07 6H17V4h-7V2H8v2H1v2h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"/>
+                </svg>
+              </button>
+            </div>
           </div>
 
           <div class="modal-actions">
