--- a/src/renderer/types/index.html
+++ b/src/renderer/types/index.html
@@ -75,8 +75,16 @@
           </div>
           <div>
             <label for="m_name_en" class="block text-sm font-bold text-slate-700 mb-2">اسم النوع (English)</label>
-            <input id="m_name_en" placeholder="e.g. Electronics" dir="ltr"
-                   class="w-full px-4 py-2.5 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm font-semibold" />
+            <div class="flex items-center gap-2">
+              <input id="m_name_en" placeholder="e.g. Electronics" dir="ltr"
+                     class="flex-1 px-4 py-2.5 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500 text-sm font-semibold" />
+              <button id="btnTranslateTypeName" type="button" title="ترجمة الاسم العربي إلى إنجليزي"
+                      class="flex-shrink-0 w-10 h-10 flex items-center justify-center bg-white border border-slate-200 rounded-lg hover:bg-blue-50 hover:border-blue-400 transition-all shadow-sm">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="#4285F4">
+                  <path d="M12.87 15.07l-2.54-2.51.03-.03A17.52 17.52 0 0 0 14.07 6H17V4h-7V2H8v2H1v2h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z"/>
+                </svg>
+              </button>
+            </div>
           </div>
           <div class="flex items-center gap-3 pt-2">
             <button id="m_save" class="px-5 py-2.5 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700 text-white rounded-lg font-bold text-sm shadow-md">حفظ</button>
